k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comic-vibe-server
  namespace: comic-vibe
spec:
  type: ClusterIP
  selector:
    app: comic-vibe-server
  ports:
    - name: http
      port: 80
      targetPort: http
